packages/cashc/test/CashCompiler/ParseError/misspelled_reverse.cash
contract Test() {
    function hello(bytes a) {
        // cspell:disable-next-lines
        bytes b = a.revese()
        require(b == a);
    }
}
